Change queue model